# bkk-delay-prediction

./: .dockerignore  Dockerfile  README.md  deploy.sh  pyproject.toml
infra/: .gitignore  aci.tf  main.tf  outputs.tf  providers.tf  storage.tf  variables.tf  vm.tf
scripts/: download_dataset.py  get_static_gtfs.py  preprocess.py  scraper.py
scripts/sql/: attach_global_trip_id.sql  clean_data.sql  clean_stop_indicators.sql  create_delays.sql  create_hops.sql  filter_frequency.sql  remove_clusters.sql  remove_duplicates.sql  remove_partial_trips.sql  use_geo.sql
src/: data.py  scraper.py  visualization.py
src/fetch/: alerts.py  static.py  transit_feed.py  vehicle_positions.py
