[project]
name = "melytanulas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "plotly>=6.3.0",
]

azure = [
    "azure-storage-blob>=12.26.0",
    "schedule>=1.2.2",
]
