[project]
name = "melytanulas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.0",
    "gdown>=5.2.0",
    "gtfs-realtime-bindings>=1.0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
]

azure = [
    "azure-storage-blob>=12.26.0",
    "schedule>=1.2.2",
]
